[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/main_menu/main_menu_3/home_screen4.png" type="Texture" id=2]
[ext_resource path="res://assets/main_menu/main_menu_3/Spel_namn_3.png" type="Texture" id=3]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Normal/Buttons-Normal---New-Game.png" type="Texture" id=4]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Press/Buttons-Press---New-Game.png" type="Texture" id=5]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Hover/Buttons-Hover---New-Game.png" type="Texture" id=6]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Normal/Buttons-Normal---Exit.png" type="Texture" id=7]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Press/Buttons-Press---Exit.png" type="Texture" id=8]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Hover/Buttons-Hover---Exit.png" type="Texture" id=9]
[ext_resource path="res://assets/main_menu/main_menu/version.png" type="Texture" id=10]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1178.0
margin_bottom = 980.0

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 1178.0
margin_bottom = 150.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 1178.0
margin_bottom = 914.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 150

[node name="Menu_options" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 150.0
margin_right = 1178.0
margin_bottom = 760.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Play" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Menu_options"]
margin_top = 290.0
margin_right = 1028.0
margin_bottom = 365.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Exit" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Menu_options"]
margin_top = 395.0
margin_right = 1028.0
margin_bottom = 470.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="version" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 918.0
margin_right = 1178.0
margin_bottom = 980.0
texture = ExtResource( 10 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Menu_options/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Menu_options/Exit" to="." method="_on_Exit_pressed"]
